# Data-Collection

./: .gitignore  README.md
VR/: README.md
human_inloop/: .env.example  .gitignore  NOTICE  README.md  THIRD_PARTY_NOTICES.md  requirements-collection.txt
human_inloop/docs/: EXTERNAL_ARTIFACTS.md  HARDWARE.md  SETUP.md
human_inloop/runtime/: piper_openpi_runtime.py
human_inloop/scripts/: collect_interactive_dagger.py  open_collection_ui.sh  run_stack_bowls_collection.sh  validate_environment.py
teleoperation/: .gitignore  README.md  pyproject.toml  requirements.txt
teleoperation/configs/: camera_mapping.yaml  piper_4cam.yaml  robot_config.yaml
teleoperation/docs/: dependency_manifest.md  migration_report.md
teleoperation/scripts/: can_activate.sh  collect_data.sh
teleoperation/src/teleoperation/: __init__.py
teleoperation/src/teleoperation/cameras/: __init__.py  configs.py  factory.py  realsense.py
teleoperation/src/teleoperation/dataset/: __init__.py  compute_stats.py  episode_cleanup.py  lerobot_dataset.py  utils.py  validate_realtime_episode.py  video_utils.py
teleoperation/src/teleoperation/gui/: __init__.py  collect_data_gui.py
teleoperation/src/teleoperation/recorder/: __init__.py  config.py
teleoperation/src/teleoperation/robot/: __init__.py  base.py  config.py  motor_config.py  motor_factory.py  piper.py  piper_motor.py
teleoperation/tools/: check_env.py  dry_run_collect.py
